Se modifican los titulos y se agrega a los tags a rel="noopener"

--- a/faqs.html
+++ b/faqs.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="Ecommerce, Bohemias, Faqs, Preguntas frecuentes, Cambios, Devoluciones"
     />
-    <title>Bohemias Store</title>
+    <title>Faqs-Bohemias Store</title>
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -259,7 +259,10 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                    <a
+                      href="https://www.facebook.com/bohemiias"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
@@ -267,6 +270,7 @@
                     <a
                       href="https://www.instagram.com/bohemiias_/"
                       target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
