--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ecommerce de Bohemias donde encontrarás indumentaria y calzado femenino">
-    <meta name="keywords" content="Ecommerce, Mujer, Indumentaria, Calzado, Ropa, Moda, Remeras, Abrigos">
+    <meta
+      name="description"
+      content="Ecommerce de Bohemias donde encontrarás indumentaria y calzado femenino"
+    />
+    <meta
+      name="keywords"
+      content="Ecommerce, Mujer, Indumentaria, Calzado, Ropa, Moda, Remeras, Abrigos"
+    />
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -323,10 +329,12 @@
         <h2 class="criticas__titulo text-center p-5 h1">
           Nuestras <span>Clientas</span>
         </h2>
-        <div
-          class="criticas__contenedor"       
-        >
-          <div class="criticas__contenedor__ind" data-tilt data-tilt-reverse="true">
+        <div class="criticas__contenedor">
+          <div
+            class="criticas__contenedor__ind"
+            data-tilt
+            data-tilt-reverse="true"
+          >
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -349,7 +357,11 @@
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
           </div>
-          <div class="criticas__contenedor__ind" data-tilt data-tilt-reverse="true">
+          <div
+            class="criticas__contenedor__ind"
+            data-tilt
+            data-tilt-reverse="true"
+          >
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -372,7 +384,11 @@
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
           </div>
-          <div class="criticas__contenedor__ind" data-tilt data-tilt-reverse="true">
+          <div
+            class="criticas__contenedor__ind"
+            data-tilt
+            data-tilt-reverse="true"
+          >
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -541,7 +557,10 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                    <a
+                      href="https://www.facebook.com/bohemiias"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
@@ -549,6 +568,7 @@
                     <a
                       href="https://www.instagram.com/bohemiias_/"
                       target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
