--- a/nosotras.html
+++ b/nosotras.html
@@ -9,7 +9,7 @@
       content="Ecommerce Bohemias, sección Nosotras donde narramos nuestra historia"
     />
     <meta name="keywords" content="Ecommerce, Bohemias, Historia, Nosotras." />
-    <title>Bohemias Store</title>
+    <title>Nosotras-Bohemias Store</title>
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -269,7 +269,10 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                    <a
+                      href="https://www.facebook.com/bohemiias"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
@@ -277,6 +280,7 @@
                     <a
                       href="https://www.instagram.com/bohemiias_/"
                       target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
