--- a/abrigos.html
+++ b/abrigos.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="Ecommerce, Mujer, Moda, Abrigos, Sweaters, Camperas"
     />
-    <title>Bohemias Store</title>
+    <title>Abrigos-Bohemias Store</title>
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -400,7 +400,10 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                    <a
+                      href="https://www.facebook.com/bohemiias"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
@@ -408,6 +411,7 @@
                     <a
                       href="https://www.instagram.com/bohemiias_/"
                       target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
