--- a/jeans.html
+++ b/jeans.html
@@ -9,7 +9,7 @@
       name="keywords"
       content="Ecommerce, Bohemias, Jeans, Skinny, Sastrero"
     />
-    <title>Bohemias Store</title>
+    <title>Jeans-Bohemias Store</title>
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -340,6 +340,7 @@
                         <a
                           href="https://www.facebook.com/bohemiias"
                           target="_blank"
+                          rel="noopener"
                           ><i
                             class="footer__quickLinks__redes fab fa-facebook"
                           ></i
@@ -349,6 +350,7 @@
                         <a
                           href="https://www.instagram.com/bohemiias_/"
                           target="_blank"
+                          rel="noopener"
                           ><i
                             class="footer__quickLinks__redes fab fa-instagram"
                           ></i
