--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Ecommerce de Bohemias, sección carrito de compras.">
     <meta name="keywords" content="Ecommerce, Bohemias, Carro de compra, Compra, pagos.">
-    <title>Bohemias Store</title>
+    <title>Carrito-Bohemias Store</title>
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -290,14 +290,14 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                    <a href="https://www.facebook.com/bohemiias" target="_blank" rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
                   <span>
                     <a
                       href="https://www.instagram.com/bohemiias_/"
-                      target="_blank"
+                      target="_blank" rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
