--- a/remeras.html
+++ b/remeras.html
@@ -9,7 +9,7 @@
       content="Ecommerce de Bohemias, sección Remeras. Donde encontras las últimas novedades"
     />
     <meta name="keywords" content="Ecommerce, Bohemias, Remeras, Moda, Ropa" />
-    <title>Bohemias Store</title>
+    <title>Remeras-Bohemias Store</title>
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -355,7 +355,10 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                    <a
+                      href="https://www.facebook.com/bohemiias"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
@@ -363,6 +366,7 @@
                     <a
                       href="https://www.instagram.com/bohemiias_/"
                       target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
