Se reduce tamaño img del carrousel

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="2000">
             <img
-              src="img/Banners/carrousel-2.png"
+              src="img/Banners/carrousel-2.jpg"
               class="d-block w-100"
               alt="img de zapatilla"
             />
