--- a/jeans.html
+++ b/jeans.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Ecommerce Bohemias, sección Jeans" />
+    <meta name="description" content="Ecommerce Bohemias, sección Jeans" />
     <meta
       name="keywords"
       content="Ecommerce, Bohemias, Jeans, Skinny, Sastrero"
