--- a/zapatos.html
+++ b/zapatos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="keywords"
+      name="description"
       content="Ecommerce de Bohemias, sección Zapatos. Donde encontraras las últimas novedades de Calzados"
     />
     <meta
