--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       content="Ecommerce, Mujer, Indumentaria, Calzado, Ropa, Moda, Remeras, Abrigos"
     />
     <title>Bohemias Store</title>
+    <!--Icono pestaña Web-->
+    <link rel="icon" href="img/Iconos/favicon.ico" />
+    <!--Icono Movil (favoritos)-->
+    <link rel="apple-touch-icon" href="img/Iconos/favicon-movil.png" />
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
