--- a/nosotras.html
+++ b/nosotras.html
@@ -10,6 +10,10 @@
     />
     <meta name="keywords" content="Ecommerce, Bohemias, Historia, Nosotras." />
     <title>Nosotras-Bohemias Store</title>
+    <!--Icono pestaña Web-->
+    <link rel="icon" href="img/Iconos/favicon.ico" />
+    <!--Icono Movil (favoritos)-->
+    <link rel="apple-touch-icon" href="img/Iconos/favicon-movil.png" />
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
