--- a/productos.html
+++ b/productos.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Ecommerce de Bohemias, sección carrito de compras.">
     <meta name="keywords" content="Ecommerce, Bohemias, Carro de compra, Compra, pagos.">
     <title>Carrito-Bohemias Store</title>
+     <!--Icono pestaña Web-->
+     <link rel="icon" href="img/Iconos/favicon.ico" />
+     <!--Icono Movil (favoritos)-->
+     <link rel="apple-touch-icon" href="img/Iconos/favicon-movil.png" />
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
