Se modifica el footer a text-center

--- a/zapatos.html
+++ b/zapatos.html
@@ -274,19 +274,22 @@
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
             <h3 class="h1">Recibí nuestras promociones</h3>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Ingresá tu email"
-            />
-            <button class="btn1">Suscribir!</button>
+            <form action="#">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Ingresá tu email"
+                required
+              />
+              <button class="btn1">Suscribir!</button>
+            </form>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-11 m-auto py-5">
             <div class="row">
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Quick Links</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -306,7 +309,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Ayuda</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -326,7 +329,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Nosotros</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
