--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
                           placeholder="Ingrese su nombre"
                           name="nombre"
                           id="nombre"
+                          required
                         />
                       </div>
                       <div class="col-lg-6">
@@ -452,6 +453,7 @@
                           placeholder="Ingrese su apellido"
                           name="apellido"
                           id="apellido"
+                          required
                         />
                       </div>
                     </div>
@@ -464,6 +466,7 @@
                           cols="30"
                           rows="5"
                           placeholder="Ingrese su mensaje"
+                          required
                         ></textarea>
                       </div>
                     </div>
@@ -485,19 +488,22 @@
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
             <h3 class="h1">Recibí nuestras promociones</h3>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Ingresá tu email"
-            />
-            <button class="btn1">Suscribir!</button>
+            <form action="#">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Ingresá tu email"
+                required
+              />
+              <button class="btn1">Suscribir!</button>
+            </form>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-11 m-auto py-5">
             <div class="row">
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Quick Links</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -517,7 +523,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Ayuda</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -537,7 +543,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Nosotros</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
