--- a/productos.html
+++ b/productos.html
@@ -218,19 +218,22 @@
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
             <h3 class="h1">Recibí nuestras promociones</h3>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Ingresá tu email"
-            />
-            <button class="btn1">Suscribir!</button>
+            <form action="#">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Ingresá tu email"
+                required
+              />
+              <button class="btn1">Suscribir!</button>
+            </form>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-11 m-auto py-5">
             <div class="row">
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Quick Links</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -250,7 +253,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Ayuda</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -270,7 +273,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-lg-3 py-3">
+              <div class="col-lg-3 py-3 text-center">
                 <h5 class="pb-3">Nosotros</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
@@ -294,14 +297,18 @@
                 <h5 class="pb-3">Redes</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank" rel="noopener"
+                    <a
+                      href="https://www.facebook.com/bohemiias"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-facebook"></i
                     ></a>
                   </span>
                   <span>
                     <a
                       href="https://www.instagram.com/bohemiias_/"
-                      target="_blank" rel="noopener"
+                      target="_blank"
+                      rel="noopener"
                       ><i class="footer__quickLinks__redes fab fa-instagram"></i
                     ></a>
                   </span>
