--- a/index.html
+++ b/index.html
@@ -589,6 +589,8 @@
         </div>
       </div>
     </footer>
+    <!--Mi JS-->
+    <script src="js/primer_entrega.js"></script>
     <!--Aos animate-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
